Modifying the login and creating the elapsed time (needs to be polished)

--- a/qta/templates/mainscreen.html
+++ b/qta/templates/mainscreen.html
@@ -38,6 +38,7 @@
                      <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
                      <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
                      <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
+                     <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
                      <b>Priority: </b><p>{{ ticket.priority }}</p>
                      <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
                      <b>Place: </b><p class="place">{{ ticket.place}}</p>
@@ -55,6 +56,7 @@
                      <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
                      <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
                      <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
+                     <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
                      <b>Priority: </b><p>{{ ticket.priority }}</p>
                      <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
                      <b>Place: </b><p class="place">{{ ticket.place}}</p>
@@ -72,6 +74,7 @@
                      <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
                      <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
                      <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
+                     <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
                      <b>Priority: </b><p>{{ ticket.priority }}</p>
                      <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
                      <b>Place: </b><p class="place">{{ ticket.place}}</p>
@@ -89,6 +92,7 @@
                      <h5 class="Number_ticket">{{ ticket.ticket_number }}</h5>
                      <b>Contact Name: </b><p class="name">{{ ticket.contact_name }}</p>
                      <b>Call Time: </b><p class="call_time">{{ ticket.call_time }}</p>
+                     <b>Time Elapse: </b><p class="time_elapse">{{ ticket.time_elapse }}</p>
                      <b>Priority: </b><p>{{ ticket.priority }}</p>
                      <b>Discussion: </b><p class="discussion">{{ ticket.discussion}}</p>
                      <b>Place: </b><p class="place">{{ ticket.place}}</p>
@@ -104,4 +108,25 @@
         </div>
         {% endblock content %}
     </body>
+    <script>
+      function calculateTimeElapsed(callTime) {
+        // Convertir la fecha y hora a un objeto Date
+        var callTimeDate = new Date(callTime);
+      
+        // Obtener la fecha y hora actual
+        var now = new Date();
+      
+        // Calcular la diferencia entre las dos fechas
+        var difference = now - callTimeDate;
+      
+        // Convertir la diferencia en milisegundos
+        var differenceInMilliseconds = difference.getTime();
+      
+        // Convertir la diferencia en segundos
+        var differenceInSeconds = differenceInMilliseconds / 1000;
+      
+        // Devolver la diferencia en segundos
+        return differenceInSeconds;
+      }
+   </script>
 </html>
