--- a/qta/templates/ticket.html
+++ b/qta/templates/ticket.html
@@ -6,58 +6,93 @@
 <body>
 {% extends 'base.html' %}
 {% block content %}
-<img style="width: 110px; height: 55px; left: 0px; top: 0px; position: absolute" src="https://i.postimg.cc/0yk5M4qN/Logo2.png" />
+<section class="vh-90" style="background-color: #63E0FF;">
+  <div class="container py-5 h-100">
+  <div class="row d-flex justify-content-center align-items-center h-100">
+     <div class="col col-xl-10">
+        <div class="card" style="border-radius: 1rem;">
+        <div class="row g-0">
 
+           <div class="col-md-6 col-lg-12 d-flex align-items-center">
+              <div class="card-body p-4 p-lg-7 text-black">
 
-<div class="row row-cols-1 row-cols-md-2 g-4">
-    <div class="col">
-       <div class="card">
-          <div class="card-body">
-            <h1>Nuevo Ticket</h1>
-            <form method="post">
-                {% csrf_token %}
-                <p for="ticket_number"><b>Ticket number: </b><input type="text" id="campo1" name="ticket_number" required><br></p>
-            
-                <p for="call_time"><b>Call time: </b><input type="datetime-local" id="campo2" name="call_time" required><br></b><p></p>
-                
+              <form actions="" method='post'>
+                 {% csrf_token %}
 
-                <p for="priority"><b>Priority: </b><select class="form-select form-select-sm" aria-label="Small select example" type="text" id="campo3" name="priority" required>
-                    <option selected>...</option>
-                    <option value="Very important">Very important</option>
-                    <option value="Important">Important</option>
-                    <option value="Urgent">Urgent</option>
-                    <option value="Regular">Regular</option>
-                  </select><br>
-                
-            
-                <p for="discussion"><b>Discussion: </b><input type="text" id="campo4" name="discussion" required><br></p>
-                
-            
-                <p for="state"><b>State: </b><select class="form-select form-select-sm" aria-label="Small select example" type="text" id="campo5" name="state" required>
-                    <option selected>...</option>
+                 <div class="d-flex align-items-center mb-3 pb-1">
+                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219; "></i>
+                    <span class="h1 fw-bold mb-0">New Ticket</span>
+                 </div>
+
+                 <div class="form-outline mb-4">
+                    <label class="form-label" for="ticket.number">ID ticket</label>
+                    <input type="text" name="ticket_number" id='campo1' class="form-control form-control-lg" required/>
+                 </div>
+
+                 <div class="form-outline mb-4">
+                    <label class="form-label" for="call_time">Call Time</label>
+                    <input type="datetime-local" name="call_time" id='campo2' class="form-control form-control-lg" required/>
+                </div>
+
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="contact_name">Contact name</label>
+                    <input type="text" name="contact_name" id='campo8' class="form-control form-control-lg" required/>
+                </div>
+
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="contact_number">Contact number</label>
+                    <input type="text" name="contact_number" id='campo9' class="form-control form-control-lg" required/>
+                </div>
+
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="discussion">Discussion</label>
+                    <input type="text" name="discussion" id='campo4' class="form-control form-control-lg" required/>
+                </div>
+
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="equipment">Equipment</label>
+                    <input type="text" name="equipment" id='campo7' class="form-control form-control-lg" required/>
+                </div>              
+
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="ticket.number">Priority</label>
+                    <select class="form-select form-select-sm" aria-label="Small select example" type="text" id="campo3" name="priority" required>
+                      <option selected>...</option>
+                      <option value="Very important">Very important</option>
+                      <option value="Important">Important</option>
+                      <option value="Urgent">Urgent</option>
+                      <option value="Regular">Regular</option>
+                    </select>
+                </div>
+
+                <div class="form-outline mb-4">
+                    <label class="form-label" for="place">Place</label>
+                    <input type="text" name="place" id='campo6' class="form-control form-control-lg" required/>
+                </div>
+
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="State">State</label>
+                  <select class="form-select form-select-sm" aria-label="Small select example" type="text" id="campo5" name="state" required>
                     <option value="New">New</option>
                     <option value="In progress">In progress</option>
                     <option value="Completed">Completed</option>
-                  </select><br>
-                
-            
-                <p for="place"><b>Place: </b><input type="text" id="campo6" name="place" required><br></p>
-                
-            
-                <p for="equipment"><b>Equipment: </b><input type="text" id="campo7" name="equipment" required><br></p>
-                
-            
-                <p for="contact_number"><b>Contact number: </b><input type="text" id="campo9" name="contact_number" required><br></p>
-                
-            
-                <p for="contact_name"><b>Contact name: </b><input type="text" id="campo8" name="contact_name" required><br></p>
+                  </select>
+                </div>
 
-            
-                <button type="submit" style="background-color: #023373; color: #ffffff">Crear Ticket</button>
-            </form>
-          </div>
-       </div>
-    </div>
+                 <div class="pt-1 mb-4">
+                    <button type='submit' class="btn btn-dark btn-lg btn-block">Create Ticket</button>
+                 </div>
+
+              </form>
+
+              </div>
+           </div>
+        </div>
+        </div>
+     </div>
+  </div>
+  </div>
+</section>
 {% endblock content %}
 </body>
 </html>
